[gd_scene load_steps=27 format=3 uid="uid://bsjcg2emguurk"]

[ext_resource type="Script" path="res://HoneyPatcher.cs" id="1_72wd4"]
[ext_resource type="Texture2D" uid="uid://b8c1paw2vgij7" path="res://assets/merge_nocomp_1.png" id="2_clxbb"]
[ext_resource type="Texture2D" uid="uid://c3jme3r8tpumq" path="res://assets/HONEYBADGER.png" id="3_uvcbp"]
[ext_resource type="Script" path="res://honey_badger.gd" id="4_vxq1r"]
[ext_resource type="Texture2D" uid="uid://bvut6magca8we" path="res://assets/explode.png" id="5_idu76"]
[ext_resource type="Script" path="res://description.gd" id="6_mif06"]
[ext_resource type="Texture2D" uid="uid://dwmvkiyktnvft" path="res://assets/explotano/explotano08.png" id="6_y4hxk"]
[ext_resource type="Texture2D" uid="uid://caab5im6xbu1m" path="res://assets/explotano/explotano09.png" id="7_pvwf1"]
[ext_resource type="Texture2D" uid="uid://dxw2gjnjsn3kk" path="res://assets/explotano/explotano10.png" id="8_t525e"]
[ext_resource type="Texture2D" uid="uid://cdjgj5ub4n8ta" path="res://assets/explotano/explotano11.png" id="9_wqh0f"]
[ext_resource type="Texture2D" uid="uid://bpjkc4ybr40g8" path="res://assets/explotano/explotano12.png" id="10_6hmc5"]
[ext_resource type="Texture2D" uid="uid://c5f3cdl1y14pg" path="res://assets/explotano/explotano13.png" id="11_fculv"]
[ext_resource type="Texture2D" uid="uid://cwstr4tnqscph" path="res://assets/explotano/explotano14.png" id="12_ixcyh"]
[ext_resource type="Texture2D" uid="uid://8p1kix6ddhks" path="res://assets/explotano/explotano15.png" id="13_f5t1a"]
[ext_resource type="Texture2D" uid="uid://bngkboxeb3n3g" path="res://assets/explotano/explotano16.png" id="14_j6888"]
[ext_resource type="Texture2D" uid="uid://6xtcwqktfams" path="res://assets/explotano/explotano00.png" id="15_np61q"]
[ext_resource type="Texture2D" uid="uid://x4ugymkgdojg" path="res://assets/explotano/explotano01.png" id="16_3m2l0"]
[ext_resource type="Texture2D" uid="uid://vq8q0bi7r8gp" path="res://assets/explotano/explotano02.png" id="17_8h525"]
[ext_resource type="Texture2D" uid="uid://btyr3ah81udoq" path="res://assets/explotano/explotano03.png" id="18_wrbbu"]
[ext_resource type="Texture2D" uid="uid://duwywld4vp4bi" path="res://assets/explotano/explotano04.png" id="19_2issm"]
[ext_resource type="Texture2D" uid="uid://cgors0gnmli82" path="res://assets/explotano/explotano05.png" id="20_331ft"]
[ext_resource type="Texture2D" uid="uid://bil4r8s58dipx" path="res://assets/explotano/explotano06.png" id="21_3ibrs"]
[ext_resource type="Texture2D" uid="uid://bj5cwia2q07ly" path="res://assets/explotano/explotano07.png" id="22_215ki"]
[ext_resource type="AudioStream" uid="uid://cfgjpqrcyrimq" path="res://explotano.ogg" id="23_1qnki"]
[ext_resource type="Script" path="res://usrdir_dialog.gd" id="25_61viv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dcw1t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_y4hxk")
}, {
"duration": 1.0,
"texture": ExtResource("7_pvwf1")
}, {
"duration": 1.0,
"texture": ExtResource("8_t525e")
}, {
"duration": 1.0,
"texture": ExtResource("9_wqh0f")
}, {
"duration": 1.0,
"texture": ExtResource("10_6hmc5")
}, {
"duration": 1.0,
"texture": ExtResource("11_fculv")
}, {
"duration": 1.0,
"texture": ExtResource("12_ixcyh")
}, {
"duration": 1.0,
"texture": ExtResource("13_f5t1a")
}, {
"duration": 1.0,
"texture": ExtResource("14_j6888")
}, {
"duration": 1.0,
"texture": ExtResource("15_np61q")
}, {
"duration": 1.0,
"texture": ExtResource("16_3m2l0")
}, {
"duration": 1.0,
"texture": ExtResource("17_8h525")
}, {
"duration": 1.0,
"texture": ExtResource("18_wrbbu")
}, {
"duration": 1.0,
"texture": ExtResource("19_2issm")
}, {
"duration": 1.0,
"texture": ExtResource("20_331ft")
}, {
"duration": 1.0,
"texture": ExtResource("21_3ibrs")
}, {
"duration": 1.0,
"texture": ExtResource("22_215ki")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="HoneyPatcher" type="Node2D" node_paths=PackedStringArray("_install", "_restoreusrdir")]
script = ExtResource("1_72wd4")
_install = NodePath("Install")
_restoreusrdir = NodePath("RestoreUSRDIR")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(344, 258)
scale = Vector2(86, 1)
texture = ExtResource("2_clxbb")

[node name="HoneyBadger" type="Sprite2D" parent="." node_paths=PackedStringArray("explode", "explotano", "explodesound")]
position = Vector2(352, 168)
scale = Vector2(0.532051, 0.522436)
texture = ExtResource("3_uvcbp")
script = ExtResource("4_vxq1r")
explode = NodePath("../Explode")
explotano = NodePath("../Explotano")
explodesound = NodePath("../ExplodeSound")

[node name="Explode" type="Sprite2D" parent="."]
visible = false
position = Vector2(352, 168)
scale = Vector2(0.517134, 0.552542)
texture = ExtResource("5_idu76")

[node name="Explotano" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(353, 158)
scale = Vector2(1.54, 1.51241)
sprite_frames = SubResource("SpriteFrames_dcw1t")

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_1qnki")
volume_db = -19.81

[node name="Title" type="Label" parent="."]
offset_left = 228.0
offset_top = 51.0
offset_right = 470.0
offset_bottom = 74.0
text = "HoneyPatcher: EXTREME STAGE"

[node name="Description" type="Label" parent="."]
offset_left = 91.0
offset_top = 448.0
offset_right = 620.0
offset_bottom = 515.0
text = "Hover over a button for more details..."
horizontal_alignment = 1
autowrap_mode = 3
script = ExtResource("6_mif06")

[node name="SelectUSRDIR" type="Button" parent="."]
offset_left = 268.0
offset_top = 250.0
offset_right = 436.0
offset_bottom = 289.0
text = "Select USRDIR..."

[node name="Install" type="Button" parent="."]
offset_left = 268.0
offset_top = 289.0
offset_right = 436.0
offset_bottom = 328.0
text = "Install all mods..."

[node name="RestoreUSRDIR" type="Button" parent="."]
offset_left = 268.0
offset_top = 328.0
offset_right = 436.0
offset_bottom = 367.0
text = "Uninstall all mods..."

[node name="PSARC" type="Button" parent="."]
visible = false
offset_left = 268.0
offset_top = 367.0
offset_right = 436.0
offset_bottom = 406.0
text = "Extract rom.psarc...
"

[node name="Unpack" type="Button" parent="."]
visible = false
offset_left = 268.0
offset_top = 406.0
offset_right = 436.0
offset_bottom = 445.0
text = "Unpack game files..."

[node name="USRDIRDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(303, 200)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true
script = ExtResource("25_61viv")

[connection signal="animation_finished" from="Explotano" to="HoneyBadger" method="_on_explotano_animation_finished"]
[connection signal="mouse_entered" from="SelectUSRDIR" to="Description" method="_on_select_usrdir_mouse_entered"]
[connection signal="pressed" from="SelectUSRDIR" to="USRDIRDialog" method="_on_select_usrdir_pressed"]
[connection signal="mouse_entered" from="Install" to="Description" method="_on_install_mouse_entered"]
[connection signal="pressed" from="Install" to="." method="_on_install_pressed"]
[connection signal="mouse_entered" from="RestoreUSRDIR" to="Description" method="_on_restore_usrdir_mouse_entered"]
[connection signal="pressed" from="RestoreUSRDIR" to="." method="_on_restore_usrdir_pressed"]
[connection signal="mouse_entered" from="PSARC" to="Description" method="_on_psarc_mouse_entered"]
[connection signal="mouse_entered" from="Unpack" to="Description" method="_on_unpack_mouse_entered"]
[connection signal="dir_selected" from="USRDIRDialog" to="." method="_on_usrdir_dialog_dir_selected"]
